# techTracker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-local.yml  manage.py  pyproject.toml
monitoring/: admin.py  filters.py  models.py  urls.py
monitoring/migrations/: 0001_initial.py  0002_alter_equipment_status.py  0003_maintenancerecord.py
monitoring/serializers/: __init__.py  alerts.py  data.py  equipment.py  history.py
monitoring/views/: __init__.py  alerts.py  data.py  equipment.py  history.py
techtrack/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  managers.py  models.py
users/migrations/: 0001_initial.py
